//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";


message BlockSign {
  bytes Sign       = 1;   //签名
  bytes Witness    = 2;   //见证人地址
  bytes Puk        = 3;   //公钥
}